# jira-to-openproject

./: .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env  .env.example  .env.test  .envrc  .flake8  .gitignore  .gitleaksignore  .importlinter  .mypy-baseline.txt  .pre-commit-config.yaml  .taskmasterconfig  .windsurfrules  AGENT.md  AGENTS.md  AGENTS.tasks.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_FIELDS_OVERVIEW.md  Dockerfile  Dockerfile.test  MIGRATION_PLAN.md  MIGRATION_RERUN_PLAN.md  Makefile  PLANNING.md  PROGRESS.md  PROJECT_GOALS.md  README.md  SECURITY.md  TASKS.md  YOLO_DEVELOPMENT.md  activate.sh  check_srvac.py  check_ssh.py  compose.yaml  compose.yml  (+25 more)
.claude-composer/: config.yaml
.cursor/: mcp-env.sh  mcp.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.serena/: project.yml
.taskmaster/: config.json  state.json
api-specs/: jira-api.yaml  openproject-api.yaml
claudedocs/: ADR_003_journal_migration_complete_journey.md  ADR_004_ruby_template_loading_pattern.md  ADR_006_bug9_activities_page_500_error.md  ADR_008_bug11_changelog_extraction_fix.md  ADR_012_bug17_18_19_journal_quality_fixes.md  bug10_missing_issues_root_cause_analysis.md  bug11_journal_creation_fix_attempt7.md  bug12_validity_period_fix.md  bug12_validity_period_fix_attempt2.md  bug28_complete_root_cause.md  bug28_fix_plan.md  bug28_syntax_errors_fixed_success.md  bug28_syntax_fix_report.md  bug29_journal_creation_failure_root_cause.md  bug29_root_cause_confirmed.md  bug32_comprehensive_fix_implementation.md  bug32_final_success_report.md  bug32_fix_attempt_failed.md  bug32_investigation_status.md  bug32_missing_journal_identified.md  bug32_missing_journals_investigation.md  bug32_regression_fixes.md  bug32_root_cause_analysis.md  bug9_activity_page_500_fix.md  bug9_error_checking_investigation_status.md  bug9_missing_journals_root_cause.md  bug9_not_null_fix_complete_report.md  bug9_progressive_state_fix_success.md  bug9_root_cause_identified.md  bug9_state_snapshot_implementation_report.md  bug9_validity_period_root_cause_analysis.md  comment_migration_attempt_final_report.md  comment_migration_bug7_fix_implementation.md  comment_migration_comprehensive_code_review.md  comment_migration_fix_implementation_report.md  comment_migration_improvements_summary.md  comment_migration_timestamp_conversion_fix.md  comment_migration_validation_plan.md  commit_933256e_root_cause_and_fix.md  existing_wp_detection_fix_report.md  (+22 more)
config/: __init__.py  cli.py  config.yaml  loader.py
contrib/: openproject.irbrc
data/: audit_trail_migration_report.json
docs/: ARCHITECTURAL_REFACTORING_RECOMMENDATIONS.md  ARCHITECTURE.md  BASEMIGRATION_API.md  CLIENT_API.md  DEVELOPER_GUIDE.md  DEVELOPMENT_ENVIRONMENT.md  ENTITY_MAPPING.md  KNOWLEDGE_BASE.md  MIGRATION_COMPONENTS.md  MIGRATION_REFERENCE.html  MIGRATION_SAFETY.md  MIGRATION_SPEC.md  PLAN_2_PHASE_MIGRATION.md  QUICK_START.md  SECURITY.md  TESTING_GUIDE.md  WORKFLOW_STATUS_GUIDE.md  client_architecture.md  compliance_checklist.md  compliance_tracking.md  component_testing.md  configuration-rule.md  configuration-rules.md  configuration-system-analysis.md  configuration-system-improvement.md  configuration.md  cutting-edge-configuration-concept.md  data_preservation_safeguards.md  development.md  exception_hierarchy.md  features.md  migration_guide.md  new-configuration-system.md  phase8_planning.md  status_migration.md  verification_process.md  workflow_configuration.md
examples/: client_architecture_demo.py  modern_typing.py  openproject_client_example.py
jira/: __init__.py
scripts/: AGENTS.md  README.md  backfill_comment_provenance_markers.py  bulk_update_wp_metadata.py  cache_jira_issues.py  cache_jira_metadata.py  check_journal_count.py  check_latest_journals.py  check_work_packages_api.py  cleanup_anonymous_comment_duplicates.py  cleanup_var.py  comprehensive_migration_test.py  convert_rails_to_json.py  create_custom_fields_json.py  data_qa.py  direct_migration.py  extract_json.py  extract_tmux_custom_fields.py  fix_logger_imports.py  fix_timestamp_timezones.py  generate_description_updates.py  get_complete_custom_fields.py  get_custom_fields.rb  get_custom_fields_simple.py  get_openproject_fields.py  install_irbrc.py  list_jira_data.py  migrate-start-fast-forward.sh  migrate-status.sh  migrate-stop.sh  migrate_no_ff.sh  migrate_nrs_182_fresh.sh  migration_quality_analysis.py  normalize_wp_mapping.py  openproject_run_rails_script.sh  prd.txt  reorganize_tests.py  run_bulk_update_direct.py  run_mock_migration.py  run_nrs_test.sh  (+36 more)
src/: AGENTS.md  README.md  __init__.py  cleanup_openproject.py  config.py  config_loader.py  display.py  export.py  main.py  migration.py  type_definitions.py  types.py  utils.py
tasks/: task_004.txt  task_005.txt  task_008.txt  task_009.txt  task_012.txt  task_018.txt  task_020.txt  task_030.txt  task_032.txt  task_034.txt  task_037.txt  task_038.txt  task_041.txt  tasks.json  tasks.json.bak
test-specs/: README.md  jira-openapi.yml  openproject-openapi.yml
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_account_migration.py  test_advanced_config_manager.py  test_advanced_security.py  test_advanced_validation.py  test_base_migration.py  test_bulk_user_creation.py  test_company_migration.py  test_custom_field_migration.py  test_dashboard_simple.py  test_data_handler.py  test_docker_client.py  test_environment.py  test_error_recovery.py  test_error_recovery_simple.py  test_file_manager.py  test_input_validation_security.py  test_integration_testing_framework.py  test_issue_type_migration.py  test_jira_client.py  test_large_scale_optimizer.py  test_link_type_migration.py  test_main.py  test_openproject_client.py  test_performance_components.py  test_project_hierarchy.py  test_project_migration.py  test_rails_console_client.py  test_ssh_client.py  test_staleness_detection_engine.py  test_staleness_manager.py  test_status_migration.py  test_thread_safety.py  test_timestamp_collision_detection.py  test_user_migration.py  (+3 more)
(+619 files in other folders)
