[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-to-openproject"
description = "Migration tool from Jira to OpenProject"
version = "0.1.0"
authors = [
    {name = "Jira to OpenProject team", email = "test@example.com"},
]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    # Core HTTP library for API calls
    "requests>=2.33.1",

    # Jira API
    "jira>=3.10.5",

    # Data validation
    "pydantic>=2.13.0",

    # Configuration and environment
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",

    # Console display and progress
    "rich>=15.0.0",

    # Redis for caching and idempotency
    "redis>=7.1.0",

    # Error recovery and resilience
    "tenacity>=9.1.2",
    "pybreaker>=1.4.1",
    "structlog>=25.5.0",

    # Database for checkpointing
    "sqlalchemy>=2.0.45",

    # System monitoring and validation
    "psutil>=7.2.1",
    "jsonschema>=4.26.0",

    # Web dashboard
    "fastapi>=0.128.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "types-PyYAML>=6.0.12.20260408",
    "types-aiofiles>=24.1.0.20250109",
    "types-requests>=2.32.0.20250106",
]

[project.scripts]
j2o = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*"]
python_functions = ["test_*"]
python_files = ["test_*.py"]
markers = [
    "unit: mark a test as a unit test",
    "functional: mark a test as a functional test",
    "integration: mark a test as an integration test",
    "end_to_end: mark a test as an end-to-end test",
    "slow: mark a test as slow-running",
    "requires_docker: test requires Docker to be available",
    "requires_ssh: test requires SSH connection to be available",
    "requires_rails: test requires Rails console to be available",
]
addopts = "-v --strict-markers --cache-dir=var/.pytest_cache"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict = false
enable_error_code = "deprecated"

# Limit type-checking to exactly these directories
files   = ["src", "scripts", "tests"]
exclude = ['^build/', '^dist/', '^\\.venv/']

[tool.ruff]
target-version = "py314"
fix = true
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Intentional patterns in this migration codebase ---
    "ASYNC250", # Blocking call in async context: intentional for interactive CLI prompts
    "BLE001",  # Blind exception: migration modules intentionally catch Exception for resilience
    "G004",    # Logging f-string: acceptable in this codebase for readability
    "TRY300",  # try-consider-else: style preference, not a bug
    "TRY301",  # raise-within-try: sometimes intentional for re-raising with context
    "TRY400",  # use-logging-exception: codebase intentionally uses logger.error in except blocks
    "TRY401",  # verbose-log-message: intentional for migration debugging
    "S110",    # try-except-pass: intentional for optional/best-effort operations
    "S112",    # try-except-continue: intentional for batch processing resilience
    "E501",    # Line too long: handled by formatter, not linter
    "C901",    # Complex structure: migration logic is inherently complex
    "PLR0912", # Too many branches: migration logic needs conditional handling
    "PLR0915", # Too many statements: migration methods are complex by nature
    "PLR0911", # Too many return statements: acceptable for validation logic
    "PLR0913", # Too many arguments: some constructors need many params
    "ARG002",  # Unused method argument: interface requirements in base class
    "FBT001",  # Boolean positional argument: acceptable in this codebase
    "FBT002",  # Boolean default positional: acceptable in this codebase
    "ANN401",  # Any type: migration data is often untyped JSON
    "D100",    # Missing module docstring: some modules are self-explanatory
    "D105",    # Missing magic method docstring: not needed for __init__ etc.
    "D107",    # Missing __init__ docstring: class docstring suffices
    "EXE005",  # Shebang not first line: __future__ imports must come first
    "PLC0415", # Import outside top-level: conditional imports are intentional
    "E402",    # Module import not at top: conditional/deferred imports are intentional
    "SLF001",  # Private member access: needed for testing and migration internals
    "DTZ007",  # datetime.strptime without zone: Jira timestamps handled separately
    "PLR2004", # Magic value comparison: acceptable in migration logic
    "S108",    # Hardcoded temp file: /tmp paths intentional for container operations
    "RUF001",  # Ambiguous unicode: intentional Jira data handling
    "RUF003",  # Ambiguous unicode comment: not relevant
    "RUF012",  # Mutable class default: acceptable pattern in dataclasses/models
    "D102",    # Missing public method docstring: not all methods need docs
    "D205",    # Missing blank line after summary: style preference
    "D401",    # Non-imperative mood: style preference
    "D417",    # Undocumented param: type hints serve as documentation
    "PTH123",  # builtin open: acceptable, Path.open not always clearer
    "S603",    # subprocess without shell: intentional subprocess usage
    "S607",    # start-process-with-partial-path: acceptable for system commands
    "S608",    # hardcoded-sql-expression: Rails console queries, not SQL injection risk
    "S113",    # request-without-timeout: acceptable for long migrations
    "N806",    # non-lowercase variable: acceptable for constants in functions
    "N815",    # mixed-case class variable: acceptable for API field names
    "TRY002",  # raise-vanilla-class: acceptable for simple errors
    "TRY004",  # type-check-without-type-error: isinstance checks are fine
    "G201",    # logging-exc-info: logger.exception already includes exc_info
    "E741",    # ambiguous-variable-name: short vars like l, O acceptable in context
    "PLW2901", # redefined-loop-name: acceptable for loop variable reassignment
    "PGH003",  # blanket-type-ignore: some type:ignore without code is acceptable
    "RUF043",  # pytest-raises-ambiguous-pattern: acceptable test patterns
    "PT019",   # pytest-fixture-param-without-value: acceptable fixture style
    "A001",    # builtin-variable-shadowing: ConnectionError alias is intentional
    "ANN001",  # missing-type-function-argument: not all functions need annotations
    "ANN003",  # missing-type-kwargs: not all kwargs need annotations
    "ANN202",  # missing-return-type-private: not all privates need return types
    "ANN204",  # missing-return-type-special-method: __init__ etc don't need return types
    "DTZ005",  # datetime.now without tzinfo: handled separately
    "DTZ011",  # date.today: acceptable usage
    "YTT204",  # sys.version_info comparison: acceptable
    "SIM105",  # suppressible-exception: contextlib.suppress not always clearer
    "TC001",   # Move import into TYPE_CHECKING: Python 3.14 PEP 649 evaluates annotations eagerly
    "TC002",   # Move third-party import into TYPE_CHECKING: same PEP 649 issue
    "TC003",   # Move stdlib import into TYPE_CHECKING: same PEP 649 issue
    "SIM102",  # collapsible-if: nested ifs sometimes clearer for readability
    "PERF401", # manual-list-comprehension: loops are sometimes clearer than comprehensions
    "UP031",   # printf-string-formatting: %-formatting acceptable in Ruby script templates
    "SIM103",  # needless-bool: explicit returns sometimes clearer
    "SIM108",  # if-else-block: explicit blocks sometimes clearer than ternary
    "ARG001",  # unused-function-argument: interface/callback requirements
    "PTH108",  # os-unlink: acceptable alongside Path usage
    "PTH119",  # os-path-basename: acceptable alongside Path usage
]

# Exclude specific rules in test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert detected
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG005", # Unused lambda argument
    "E501",   # Line too long
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic number in tests
    "SLF001", # Private member accessed
    "S108",   # Probable insecure temp file usage
    "S311",   # Non-crypto random
    "S603",   # subprocess untrusted input (tests)
    "S607",   # subprocess partial path (tests)
    "B018",   # Useless expression
    "BLE001", # Broad except in tests
    "B904",   # Raise from in except
    "TRY003", # Long messages outside exception class
    "TRY300", # Move return to else
    "ANN001", # Missing param annotation
    "ANN201", # Missing return annotation (public)
    "ANN202", # Missing return annotation (private)
    "ANN401", # Any in annotations
    "D401",   # Docstring imperative mood
    "D200",   # One-line docstring
    "D100",   # Missing docstring module
    "D101",   # Missing docstring class
    "D103",   # Missing docstring function
    "D417",   # Missing argument docs in docstring
    "T201",   # print in tests
    "T203",   # pprint in tests
    "PT011",  # pytest raises style
    "EXE001", # Shebang non-executable
    "SIM117", # Combine with statements
    "PLC0415", # Import not top-level
    "PLC",    # All PLC class in tests
    "EM102",  # f-string in exception
    "EM",     # All EM class in tests
    "PTH110", # os.path.exists -> Path.exists
    "PTH112", # os.path.isdir -> Path.is_dir
    "PTH113", # os.path.isfile -> Path.is_file
    "PTH202", # os.path.getsize -> Path.stat
    "DTZ005", # datetime.now without tz
    "DTZ001", # datetime() without tzinfo
    "N",      # Naming convention checks in tests
    "S",      # Security checks in tests
    "TRY",    # Try/except style in tests
    "PERF",   # Performance suggestions in tests
    "FBT",    # Boolean trap rules in tests
    "PTH",    # Pathlib migration in tests
    "RUF001", # Ambiguous characters
    "RUF003", # Ambiguous characters in comments
    "F841",   # Assigned but unused (test scaffolding)
    "B007",   # Unused loop variable
    "INP001", # Implicit namespace package for tests
    "ISC001", # Implicit string concatenation
    "PT013",  # import pytest style
    "PT018",  # assertion should be multiple parts
    "PGH003", # Use specific rule codes in ignores
    "ASYNC230", # async blocking open in tests
    "B017",   # assert blind exception in tests
    "B023",   # loop variable binding in lambda in tests
    "SIM102", # nested if in tests
    "RET504", # unnecessary assignment before return in tests
    "A004",   # Import shadowing builtin
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "TD001",  # Allow TODO without author in tests
    "TD002",  # Allow TODO without author tag in tests
    "TD003",  # Allow TODO without issue link in tests
    "FIX002", # Allow TODO present in tests
    "D205",   # Blank line after summary in docstring
    "D400",   # First line should end with period
    "D415",   # First line ends with proper punctuation
    "D102",   # Missing docstring in public method
    "ANN002", # *args type annotations
    "ANN003", # **kwargs type annotations
    "ANN204", # __init__ return type
    "PT012",  # pytest.raises single simple statement
    "SIM105", # contextlib.suppress vs try/except
    "ERA001", # Commented-out code (allowed in tests)
]
"scripts/**/*.py" = ["T201", "T203"]  # Allow (p)print in scripts
"examples/**/*.py" = ["T201", "T203"]  # Allow (p)print in examples

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
