[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-to-openproject"
description = "Migration tool from Jira to OpenProject"
version = "0.1.0"
authors = [
    {name = "Jira to OpenProject team", email = "test@example.com"},
]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    # Core HTTP library for API calls
    "requests>=2.33.1",

    # Jira API
    "jira>=3.10.5",

    # Data validation
    "pydantic>=2.13.3",

    # Configuration and environment
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",

    # Console display and progress
    "rich>=15.0.0",

    # Redis for caching and idempotency
    "redis>=7.4.0",

    # Error recovery and resilience
    "tenacity>=9.1.4",
    "pybreaker>=1.4.1",
    "structlog>=25.5.0",

    # Database for checkpointing
    "sqlalchemy>=2.0.49",

    # System monitoring and validation
    "psutil>=7.2.2",
    "jsonschema>=4.26.0",

    # Web dashboard
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]
dev = [
    "pre-commit>=4.6.0",
    "mypy>=1.20.2",
    # Pin < 0.15: ruff 0.15 strips parens from `except (X, Y):` which only
    # parses on Python 3.14 and breaks for anyone on 3.12/3.13.
    "ruff>=0.14,<0.15",
    "types-PyYAML>=6.0.12.20260408",
    "types-aiofiles>=25.1.0.20260409",
    "types-requests>=2.33.0.20260408",
]

[project.scripts]
j2o = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*"]
python_functions = ["test_*"]
python_files = ["test_*.py"]
cache_dir = "var/.pytest_cache"
markers = [
    "unit: mark a test as a unit test",
    "functional: mark a test as a functional test",
    "integration: mark a test as an integration test",
    "end_to_end: mark a test as an end-to-end test",
    "slow: mark a test as slow-running",
    "fast: mark a test as fast-running (unit tests)",
    "requires_docker: test requires Docker to be available",
    "requires_ssh: test requires SSH connection to be available",
    "requires_rails: test requires Rails console to be available",
    "security: mark a test as a security test",
    "regression: mark a test as a regression test",
    "performance: mark a test as performance-related",
    "bug_verification: mark a test as bug verification",
    "fix_verification: mark a test as fix verification",
]
addopts = "-v --strict-markers"
filterwarnings = [
    "ignore:cannot collect test class.*because it has a __init__ constructor:pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict = false
enable_error_code = "deprecated"
explicit_package_bases = true
namespace_packages = true

# Limit type-checking to production code. Tests and one-off operational scripts
# are excluded because they intentionally exercise edge cases, mock internals,
# and rely on duck typing against mocked dependencies.
files   = ["src"]
exclude = ['^build/', '^dist/', '^\\.venv/', '^tests/', '^scripts/']

# Migration / client modules bridge untyped JSON from the Jira and OpenProject
# APIs. Their "errors" are almost all about dict[str, Any] shapes we cannot
# statically prove. Silence the structural codes on those boundaries while
# still catching name/import issues.
[[tool.mypy.overrides]]
module = [
    "src.clients.*",
    "src.migrations.*",
    "src.utils.*",
    "src.migration",
    "src.main",
    "src.dashboard.app",
    "src.dashboard.*",
]
disable_error_code = [
    "attr-defined",
    "operator",
    "arg-type",
    "assignment",
    "union-attr",
    "var-annotated",
    "index",
    "call-arg",
    "return-value",
    "method-assign",
    "call-overload",
    "list-item",
    "typeddict-item",
    "typeddict-unknown-key",
    "no-redef",
    "override",
    "str-bytes-safe",
    "misc",
    "dict-item",
    "has-type",
    "return",
]

[tool.ruff]
target-version = "py314"
fix = true
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Intentional patterns in this migration codebase ---
    "ASYNC250", # Blocking call in async context: intentional for interactive CLI prompts
    "BLE001",  # Blind exception: migration modules intentionally catch Exception for resilience
    "G004",    # Logging f-string: acceptable in this codebase for readability
    "TRY300",  # try-consider-else: style preference, not a bug
    "TRY301",  # raise-within-try: sometimes intentional for re-raising with context
    "TRY400",  # use-logging-exception: codebase intentionally uses logger.error in except blocks
    "TRY401",  # verbose-log-message: intentional for migration debugging
    "S110",    # try-except-pass: intentional for optional/best-effort operations
    "S112",    # try-except-continue: intentional for batch processing resilience
    "E501",    # Line too long: handled by formatter, not linter
    "C901",    # Complex structure: migration logic is inherently complex
    "PLR0912", # Too many branches: migration logic needs conditional handling
    "PLR0915", # Too many statements: migration methods are complex by nature
    "PLR0911", # Too many return statements: acceptable for validation logic
    "PLR0913", # Too many arguments: some constructors need many params
    "ARG002",  # Unused method argument: interface requirements in base class
    "FBT001",  # Boolean positional argument: acceptable in this codebase
    "FBT002",  # Boolean default positional: acceptable in this codebase
    "ANN401",  # Any type: migration data is often untyped JSON
    "D100",    # Missing module docstring: some modules are self-explanatory
    "D105",    # Missing magic method docstring: not needed for __init__ etc.
    "D107",    # Missing __init__ docstring: class docstring suffices
    "EXE005",  # Shebang not first line: __future__ imports must come first
    "PLC0415", # Import outside top-level: conditional imports are intentional
    "E402",    # Module import not at top: conditional/deferred imports are intentional
    "SLF001",  # Private member access: needed for testing and migration internals
    "DTZ007",  # datetime.strptime without zone: Jira timestamps handled separately
    "PLR2004", # Magic value comparison: acceptable in migration logic
    "S108",    # Hardcoded temp file: /tmp paths intentional for container operations
    "RUF001",  # Ambiguous unicode: intentional Jira data handling
    "RUF003",  # Ambiguous unicode comment: not relevant
    "RUF012",  # Mutable class default: acceptable pattern in dataclasses/models
    "D102",    # Missing public method docstring: not all methods need docs
    "D205",    # Missing blank line after summary: style preference
    "D401",    # Non-imperative mood: style preference
    "D417",    # Undocumented param: type hints serve as documentation
    "PTH123",  # builtin open: acceptable, Path.open not always clearer
    "S603",    # subprocess without shell: intentional subprocess usage
    "S607",    # start-process-with-partial-path: acceptable for system commands
    "S608",    # hardcoded-sql-expression: Rails console queries, not SQL injection risk
    "S113",    # request-without-timeout: acceptable for long migrations
    "N806",    # non-lowercase variable: acceptable for constants in functions
    "N815",    # mixed-case class variable: acceptable for API field names
    "TRY002",  # raise-vanilla-class: acceptable for simple errors
    "TRY004",  # type-check-without-type-error: isinstance checks are fine
    "G201",    # logging-exc-info: logger.exception already includes exc_info
    "E741",    # ambiguous-variable-name: short vars like l, O acceptable in context
    "PLW2901", # redefined-loop-name: acceptable for loop variable reassignment
    "PGH003",  # blanket-type-ignore: some type:ignore without code is acceptable
    "RUF043",  # pytest-raises-ambiguous-pattern: acceptable test patterns
    "PT019",   # pytest-fixture-param-without-value: acceptable fixture style
    "A001",    # builtin-variable-shadowing: ConnectionError alias is intentional
    "ANN001",  # missing-type-function-argument: not all functions need annotations
    "ANN003",  # missing-type-kwargs: not all kwargs need annotations
    "ANN202",  # missing-return-type-private: not all privates need return types
    "ANN204",  # missing-return-type-special-method: __init__ etc don't need return types
    "DTZ005",  # datetime.now without tzinfo: handled separately
    "DTZ011",  # date.today: acceptable usage
    "YTT204",  # sys.version_info comparison: acceptable
    "SIM105",  # suppressible-exception: contextlib.suppress not always clearer
    "TC001",   # Move import into TYPE_CHECKING: Python 3.14 PEP 649 evaluates annotations eagerly
    "TC002",   # Move third-party import into TYPE_CHECKING: same PEP 649 issue
    "TC003",   # Move stdlib import into TYPE_CHECKING: same PEP 649 issue
    "SIM102",  # collapsible-if: nested ifs sometimes clearer for readability
    "PERF401", # manual-list-comprehension: loops are sometimes clearer than comprehensions
    "UP031",   # printf-string-formatting: %-formatting acceptable in Ruby script templates
    "SIM103",  # needless-bool: explicit returns sometimes clearer
    "SIM108",  # if-else-block: explicit blocks sometimes clearer than ternary
    "ARG001",  # unused-function-argument: interface/callback requirements
    "PTH108",  # os-unlink: acceptable alongside Path usage
    "PTH119",  # os-path-basename: acceptable alongside Path usage
    # Rules that conflict with each other or with the formatter:
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # missing-trailing-comma (conflicts with ruff formatter)
    # Filesystem-mode dependent: WSL2 reports all files as executable, Linux
    # CI does not, so this rule fires inconsistently on shebanged source we
    # never run as scripts (examples/, check_*.py, demo modules).
    "EXE001",
]

# Exclude specific rules in test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert detected
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG005", # Unused lambda argument
    "E501",   # Line too long
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic number in tests
    "SLF001", # Private member accessed
    "S108",   # Probable insecure temp file usage
    "S311",   # Non-crypto random
    "S603",   # subprocess untrusted input (tests)
    "S607",   # subprocess partial path (tests)
    "B018",   # Useless expression
    "BLE001", # Broad except in tests
    "B904",   # Raise from in except
    "TRY003", # Long messages outside exception class
    "TRY300", # Move return to else
    "ANN001", # Missing param annotation
    "ANN201", # Missing return annotation (public)
    "ANN202", # Missing return annotation (private)
    "ANN401", # Any in annotations
    "D401",   # Docstring imperative mood
    "D200",   # One-line docstring
    "D100",   # Missing docstring module
    "D101",   # Missing docstring class
    "D103",   # Missing docstring function
    "D417",   # Missing argument docs in docstring
    "T201",   # print in tests
    "T203",   # pprint in tests
    "PT011",  # pytest raises style
    "EXE001", # Shebang non-executable
    "SIM117", # Combine with statements
    "PLC0415", # Import not top-level
    "PLC",    # All PLC class in tests
    "EM102",  # f-string in exception
    "EM",     # All EM class in tests
    "PTH110", # os.path.exists -> Path.exists
    "PTH112", # os.path.isdir -> Path.is_dir
    "PTH113", # os.path.isfile -> Path.is_file
    "PTH202", # os.path.getsize -> Path.stat
    "DTZ005", # datetime.now without tz
    "DTZ001", # datetime() without tzinfo
    "N",      # Naming convention checks in tests
    "S",      # Security checks in tests
    "TRY",    # Try/except style in tests
    "PERF",   # Performance suggestions in tests
    "FBT",    # Boolean trap rules in tests
    "PTH",    # Pathlib migration in tests
    "RUF001", # Ambiguous characters
    "RUF003", # Ambiguous characters in comments
    "F841",   # Assigned but unused (test scaffolding)
    "B007",   # Unused loop variable
    "INP001", # Implicit namespace package for tests
    "ISC001", # Implicit string concatenation
    "PT013",  # import pytest style
    "PT018",  # assertion should be multiple parts
    "PGH003", # Use specific rule codes in ignores
    "ASYNC230", # async blocking open in tests
    "B017",   # assert blind exception in tests
    "B023",   # loop variable binding in lambda in tests
    "SIM102", # nested if in tests
    "RET504", # unnecessary assignment before return in tests
    "A004",   # Import shadowing builtin
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "TD001",  # Allow TODO without author in tests
    "TD002",  # Allow TODO without author tag in tests
    "TD003",  # Allow TODO without issue link in tests
    "FIX002", # Allow TODO present in tests
    "D205",   # Blank line after summary in docstring
    "D400",   # First line should end with period
    "D415",   # First line ends with proper punctuation
    "D102",   # Missing docstring in public method
    "ANN002", # *args type annotations
    "ANN003", # **kwargs type annotations
    "ANN204", # __init__ return type
    "PT012",  # pytest.raises single simple statement
    "SIM105", # contextlib.suppress vs try/except
    "ERA001", # Commented-out code (allowed in tests)
]
# One-off operational scripts: relaxed style (prints, docstrings, annotations optional)
"scripts/**/*.py" = [
    "T201", "T203",  # (p)print allowed in scripts
    "D",              # docstring rules
    "ANN",            # type annotations optional
    "EM", "TRY003",   # exception message style
    "ERA001",         # commented-out code
    "N805", "N806",   # naming in utility scripts
    "S602",           # subprocess shell=True (operational scripts)
    "S105",           # hardcoded password-like strings (api_token arg names)
    "G003", "G004",   # logger formatting
    "B007", "B904", "B018",
    "F841",           # unused local in exploratory scripts
    "F821",           # undefined name (scripts may embed Ruby in f-strings)
    "PTH",            # pathlib migration optional
    "FBT",
    "INP001",         # implicit namespace package
    "RET503", "RET504",
    "SIM108", "SIM118", "SIM113",
    "PERF102",
    "PLR2004", "PLR0912",
    "FURB",
    "PT028",
    "RUF",
    "W293",            # blank-line whitespace in scripts
    "ASYNC240",        # pathlib in async scripts
    "ARG005",          # unused lambda arg
    "E722",            # bare except in scripts
]
"examples/**/*.py" = [
    "T201", "T203", "D", "ANN", "EM", "TRY003", "INP001", "ERA001",
    "PTH107",
]
"check_*.py" = [
    "T201", "T203", "D", "ANN", "EM", "TRY003", "S105", "S602", "INP001", "ERA001",
]
# jira/ directory contains local test stubs, not the real jira package
"jira/**/*.py" = [
    "D", "ANN", "T201", "INP001", "F401", "N801",
]
# config/ uses project exception-message style (f-strings in raise)
"config/**/*.py" = [
    "EM101", "EM102", "TRY003",  # exception message literal / f-string style
    "T201",                        # print in CLI tool
    "N805",                        # pydantic validators use cls
    "S105",                        # api_token/password env var names
    "B904",                        # raise-from: acceptable in validators
    "A002",                        # shadow 'format' parameter
    "PLW0603",                     # module-level singleton cache
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
